// Copyright 2020 IBM Corp.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package connectors;
option java_package = "io.fybrik";
option go_package = "fybrik.io/fybrik/pkg/connectors/protobuf";

import "credentials.proto";
import "dataset_details.proto";

message RegisterAssetRequest {
	Credentials creds = 1;
	DatasetDetails dataset_details = 2; 	
	string destination_catalog_id = 3;
    string credential_path = 4;   // link to vault plugin for reading k8s secret with user credentials
}
